lab3 timer multiplexing

--- a/lab3/.vscode/settings.json
+++ b/lab3/.vscode/settings.json
@@ -5,6 +5,7 @@
         "devicetree.h": "c",
         "utils.h": "c",
         "exception.h": "c",
-        "timer.h": "c"
+        "timer.h": "c",
+        "time.h": "c"
     }
 }
