--- a/lab3/Makefile
+++ b/lab3/Makefile
@@ -81,7 +81,7 @@ close:
 	tmux kill-session -t $(SESSION)
 
 .PHONY: deploy
-deploy:
+deploy: all
 	python3 ../lab2/bootloader/transfer.py -f kernel8.img -p /dev/ttyUSB0
 	screen /dev/ttyUSB0 115200
 
